src/objects/CE_UserSkill__c.object
<CustomObject>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <label>Experience Level</label>
        <picklist>
            <picklistValues>
                <fullName>Entry Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Skill__c</fullName>
        <externalId>true</externalId>
        <label>Member Skill</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <referenceTo>CE_Skills__c</referenceTo>
        <relationshipLabel>User Skills</relationshipLabel>
        <relationshipName>User_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Skill</label>
    <nameField>
        <displayFormat>US-{000000000}</displayFormat>
        <label>UserSkill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>